2013-02-05    <wendt@math.tu-berlin.de> (2.0.0 = 2013012301)

	* Final adaptions for Moodle 2. Should be Moodle 2 conform now

	* Bug fixed: Deleted user will be noticed

2012-10-10    <wendt@math.tu-berlin.de> (2.0 = 2012101000)

	* Upgrade: hopefully everything moodle2.3 conform now
	
	* New admin settings: Hide ID number for privacy reasons. Set maximal number of students.

	* New extendend breadcrumbs

2012-07-11    <wendt@math.tu-berlin.de> (1.4.2 = 2012071100)

	* GPL Note added to version.php

	* Folder lang/en removed

	* Bug removed: No subscription possible if maxstudents=1

2012-04-09    <wendt@math.tu-berlin.de> (1.4.1 = 2012040900)

	* Bug removed: People could change registration-html-form in browser and register for closed dates.

	* Bug fixed, view.php: language variables get text before language is set

	* Bug fixed (from Pascal): There is also a bug. In the file lang/fr_utf8/registration.php; if you write a word with a ' for the string['answer'], the module will not subscribe or unsubscribe the student.
		Example : $string['answer'] = "S'inscrire";

	* omit students.php, function partially integrated in view.php

2010-12-21    <wendt@math.tu-berlin.de> (1.4 = 2010122100)

	* view.php: correlated points to scale in table

	* view.php, db/access.php: insert new capability "mod/registration:viewlist" 
	to hide the table of subscribed user from students

	* view.php: hide "notefull" if the student is subscribed already

	* lang/de_utf8/registration.php: german language added

	* db/install.xml: bugfix: inserted missing column "comment"

	* students.php: security fix: inserted test for capability 'mod/registration:viewlist'

	(should be 'mod/registration:grade' at least)

	* submissions.php: smaller box for content

	* view.php: corrected page-header

	* view.php: changed log-messages to subscribe/unsubscribe

2010-07-30    Pascal Maury (1.3.6 = 2010073000)

	* Update reset functions for Moodle 1.9

2008-01-29    <rh@wsfc.ac.uk> (1.3.5 = 2008012900)
