@@ -24,8 +24,8 @@
  * @license    http://www.gnu.org/copyleft/gpl.html GNU GPL v3 or later
  */
 
-$module->version  = 2013040701;
-$module->release  = 'v2.0.1';    // human-friendly version name
+$module->version  = 2013102501;
+$module->release  = 'v2.0.2';    // human-friendly version name
 $module->requires = 2012062501;  // Requires this Moodle version
 $module->cron     = 60;
 
